fix: load PatientEnrollment inside @Transactional in EligibilityScreeningCaseService (#10)